messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
      version: green
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: green
    spec:
      containers:
      - name: django-app
        image: bill25concept/django-message-app:1.0.0
        ports:
        - containerPort: 8000
